[package]
name = "sds011-rs"
version = "0.3.1"
authors = ["Keno Hassler"]
edition = "2021"
#rust-version = "1.81"
description = "A driver for the SDS011 particle sensor based on embedded-io."
repository = "https://github.com/kenohassler/sds011-rs"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal", "async"]
categories = ["hardware-support", "no-std"]

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6"
embedded-io-async = "0.6"
maybe-async = "0.2"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
embedded-io-adapters = { version = "0.6", features = ["std", "tokio-1"] }
inquire = "0.7"
serialport = "4.4"
tokio-serial = "5.4"
tokio = { version = "1.38", features = ["macros", "time", "rt-multi-thread"] }

[features]
sync = ["maybe-async/is_sync"]


[lib]
name = "sds011"
path = "src/lib.rs"

[[example]]
name = "sds011-cli-async"
path = "examples/cli_async.rs"

[[example]]
name = "sds011-cli"
path = "examples/cli.rs"
required-features = ["sync"]
